; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winhttp/extr_winhttp.c_set_default_proxy_reg_value.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winhttp/extr_winhttp.c_set_default_proxy_reg_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEY_WRITE = common dso_local global i32 0, align 4
@KEY_WOW64_64KEY = common dso_local global i32 0, align 4
@KEY_WOW64_32KEY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @set_default_proxy_reg_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_default_proxy_reg_value(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = call i32 (...) @GetCurrentProcess()
  %9 = call i32 @IsWow64Process(i32 %8, i64* %7)
  %10 = load i32, i32* @KEY_WRITE, align 4
  %11 = load i32, i32* @KEY_WOW64_64KEY, align 4
  %12 = or i32 %10, %11
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @set_proxy(i32 %12, i32* %13, i32 %14, i32 %15)
  %17 = load i32, i32* @KEY_WRITE, align 4
  %18 = load i32, i32* @KEY_WOW64_32KEY, align 4
  %19 = or i32 %17, %18
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @set_proxy(i32 %19, i32* %20, i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @IsWow64Process(i32, i64*) #1

declare dso_local i32 @GetCurrentProcess(...) #1

declare dso_local i32 @set_proxy(i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
